--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ALPS"]
+	path = ALPS
+	url = https://github.com/itsvenu/alps
+	shallow = true
+	registered = true
